# Context-Aware-Architecture-Synthesis

./: .gitignore  CMakeLists.txt  README.md
examples/: mobile_code_generation.json  mobile_low_latency_code_generation.json
include/archsynth/conditioning/: scenario.h  scenario_encoder.h
include/archsynth/core/: genotype.h  graph.h  json.h  primitives.h  types.h
include/archsynth/evaluation/: evaluator.h  hardware_cost.h  proxy_trainer.h
include/archsynth/export/: builder.h
include/archsynth/llm_assist/: llm_mutator.h
include/archsynth/search/: crossover.h  evolution.h  mutations.h  population.h
src/: main.cpp
src/conditioning/: scenario_encoder.cpp
src/core/: genotype.cpp  graph.cpp  primitives.cpp
src/evaluation/: evaluator.cpp  hardware_cost.cpp  proxy_trainer.cpp
src/export/: builder.cpp
src/llm_assist/: llm_mutator.cpp
src/search/: crossover.cpp  evolution.cpp  mutations.cpp  population.cpp
tests/: test_evaluator.cpp  test_evolution.cpp  test_genotype.cpp  test_graph.cpp  test_llm_mutator.cpp  test_mutations.cpp  test_primitives.cpp
